Add fish configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,3 +59,7 @@ bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 # moving between windows with vim movement keys
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
+set-option -g default-shell "/usr/bin/fish"
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
