--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,5 +61,7 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 set-option -g default-shell "/usr/bin/fish"
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+#set-option -g default-terminal "screen-256color"
+#set -ga terminal-overrides ',xterm:colors=256:Tc'
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
