Change tmux prefix key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,9 @@ set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # prefixキーの変更
-#unbind C-b
-#set -g prefix C-;
-#bind C-; send-prefix
+unbind C-b
+set -g prefix C-t
+bind C-t send-prefix
 
 # vimのキーバインドでペインを移動する
 bind h select-pane -L
